<resources>
    <string name="app_name">Msafiri</string>
    <string name="title_activity_vehicle_registration">Vehicle Registration</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_activity_home">Msafiri</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_view_all">View All</string>
    <string name="title_activity_my_trips">My Trips</string>
    <string name="title_activity_help">Help</string>
    <string name="short_bio">I love travelling around my country Kenya. I seek adventure.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- EditTexts -->
    <string name="editTextVehicleType">Vehicle Type</string>
    <string name="editTextRegistrationDetails">Registration Details</string>
    <string name="editTextCompanyName">Company Name</string>
    <string name="editTextNumberOfSeats">Number of Seats</string>
    <string name="editTextTravelRoute">Travel Route</string>
    <string name="editTextPriceOfTravel">Price in KES</string>
    <!-- End of EditTexts-->

    <!-- Buttons -->
    <string name="buttonVehicleTypeSubmit">Submit</string>
    <!-- End of Buttons -->

    <!-- TextViews -->
    <string name="textViewVehicleType">Please fill in details of a vehicle type to avail it for booking.</string>
    <string name="textViewAppName">Msafiri</string>
    <!-- End of TextViews -->

    <!-- Bus Ticketing Strings -->
    <string name="select">Select your route</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="doj">Date of journey</string>
    <string name="search_bus">Search buses</string>
    <string name="touch_to_enter_city_name">Touch to enter a city name</string>
    <string name="autocomplete_city_hint">Enter a city name</string>
    <string name="recent_search">Recent searches</string>
    <string name="top_search">Top searches</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="done">DONE</string>
    <string name="cancel">Cancel</string>
    <string name="departure_address">Depature Adrress:</string>
    <string name="bus_service">Bus Service:</string>
    <string name="telephone">Telephone: </string>
    <string name="teleprefix">+95</string>
    <string name="price">Price:</string>
    <string name="total_seat">Total Seat:</string>
    <string name="call">CALL</string>
    <string name="buy_now">Buy Now</string>
    <string name="send_sms">Send Sms</string>
    <string name="bus_fare">Bus fare</string>
    <string name="bus_time">Time</string>
    <string name="ratings">Ratings</string>
    <string name="select_a_bus">Select a Bus</string>
    <string name="rupees">₹</string>
    <string name="lower">Lower</string>
    <string name="upper">Upper</string>
    <string name="seats_selected">Selected seats:</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="ladies">Ladies</string>
    <string name="goBack">Go back</string>
    <string name="instruction">Tap below to select seats</string>
    <string name="total_fare_text">Total fare</string>
    <string name="agent_info">Send Sms for Further process!   </string>
    <string name="boardingPointText">Boarding from</string>
    <string name="boardingPointSelectionHeader">Select your boarding point</string>
    <string name="rtc_caveat">Please Note: The price is exclusive of reservation fee and other charges as per KSRTC T&amp;C</string>
    <string name="continue_booking_text">Continue booking</string>
    <string name="Please_fill_mpin">Please fill the M-pin</string>
    <string name="atlrt_sending_this_amount">Your Sending amount is =</string>
    <string name="checkbalance">*669*10*</string>
    <string name="checkProfileAPI">*669*12*1*</string>
    <string name="loyaltyAPI">*669*5*</string>
    <string name="DiscountMoneyAPI">*669*5*</string>


    <string name="invitation_title">Msafiri</string>
    <string name="invitation_message">Msafiri is your best travel ticket manager</string>
    <string name="invitation_deep_link">msafiri-80193.firebaseapp.com/</string>
    <string name="invitation_cta">Download</string>


    <string-array name="destinations">
        <item>Nairobi</item>
        <item>Mombasa</item>
        <item>Kisumu</item>
        <item>Eldoret</item>
        <item>Machakos</item>
        <item>Kerugoya</item>
        <item>Turkana</item>
        <item>Kitale</item>
        <item>Busia</item>
        <item>Bungoma</item>
        <item>Isolo</item>
        <item>Migori</item>
    </string-array>
    <string name="title_activity_vehicle_details">" Vehicle Details"</string>
    <string name="title_activity_deal_offers">Deals &amp; Offers</string>
    <string name="title_activity_tickets">Tickets</string>
    <string name="title_activity_direct_book">Direct Book</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_booking">Booking</string>
    <string name="title_activity_qrcode">QR Code</string>
</resources>
