<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ai.kortnevdmitriy.msafiri.activities.VehicleRegistration"
    tools:showIn="@layout/activity_vehicle_registration">

    <EditText
        android:id="@+id/editTextVehicleType"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:gravity="center"
        android:hint="@string/editTextVehicleType"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextRegistrationDetails"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:gravity="center"
        android:hint="@string/editTextRegistrationDetails"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVehicleType" />

    <EditText
        android:id="@+id/editTextCompanyName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:gravity="center"
        android:hint="@string/editTextCompanyName"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegistrationDetails" />

    <EditText
        android:id="@+id/editTextNumberOfSeats"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:gravity="center"
        android:hint="@string/editTextNumberOfSeats"
        android:inputType="text|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCompanyName" />

    <EditText
        android:id="@+id/editTextTravelRoute"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:gravity="center"
        android:hint="@string/editTextTravelRoute"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberOfSeats" />

    <EditText
        android:id="@+id/editTextPriceOfTravel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittextshape"
        android:ems="10"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:gravity="center"
        android:hint="@string/editTextPriceOfTravel"
        android:inputType="text|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTravelRoute" />

    <Button
        android:id="@+id/buttonVehicleTypeSubmit"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttonshape"
        android:elevation="8dp"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:text="@string/buttonVehicleTypeSubmit"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPriceOfTravel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quattrocento_sans_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/textViewVehicleType"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
